# rect_cut

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt
src/application/app/: main.cpp  planeapi.cpp  planeapi.h  planeviewmodel.cpp  planeviewmodel.h
src/application/ui/: Input.qml  Main.qml  Plane.qml
src/domain/: CMakeLists.txt  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  defs.h  domain.cpp  domain.h  plane.cpp  plane.h
src/domain_tests/: CMakeLists.txt  tst_domain.cpp
